Sat Jul 11 07:11:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/readline.c (readline_attempted_completion_function):
	  array length is long.

	* ext/readline/readline.c (readline_s_get_filename_quote_characters):
	  missing type of self.

Sat Jul 11 02:37:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (limited_rand): expands to long before shift so tha
	  the result does not overflow.

Sat Jul 11 00:16:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (rand_init): got rid of buffer overflow.

Sat Jul 11 00:11:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (ary_join_1): should recurse for element array.

Fri Jul 10 23:10:11 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (io_strip_bom): ungetbyte third byte when UTF-16LE.

Fri Jul 10 23:04:16 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (io_strip_bom): Fix condition of second byte of
	  UTF-16LE/UTF-32LE.

Fri Jul 10 21:45:30 2009  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/extconf.rb: checked rl_refresh_line in readline.

	* ext/readline/readline.c (readline_s_refresh_line): add new
	  method, a patch from Koichiro Ohba. see [ruby-list:45922].

Fri Jul 10 21:00:05 2009  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/extconf.rb: checked rl_line_buffer and rl_point in
	  readline.

	* ext/readline/readline.c (readline_s_get_line_buffer): new method.
	  (readline_s_get_point): new method.

Fri Jul 10 16:30:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (recursive_join): use obj to tell if recursion occurs.
	  [ruby-core:24150]

	* enum.c (enum_join): reverted r23966.  [ruby-core:24196]

Fri Jul 10 14:41:34 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* marshal.c (r_object0): set encoding only if the encoding
	  is not US-ASCII.

Fri Jul 10 14:44:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (struct MT): ruby already assumes int has 32bit a
	  least, so no needs to use long.
